--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,25 @@
 name: Upload Website
 
 on:
- push:
-   branches:
-   - main
+  push:
+    branches:
+      - main
 
 jobs:
- deploy:
-   runs-on: ubuntu-latest
-   steps:
-   - name: Checkout
-     uses: actions/checkout@v1
+  deploy:
+    runs-on: ubuntu-latest
 
-   - name: Configure AWS Credentials
-     uses: aws-actions/configure-aws-credentials@v1
-     with:
-       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-       aws-region: us-east-1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-   - name: Deploy static site to S3 bucket
-     run: aws s3 sync ./public/ s3://lab-bucket-kbsingh --delete
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1  # change region if needed
+
+      - name: Deploy static site to S3 bucket
+        run: |
+          aws s3 sync ./public/ s3://lab-bucket-kbsingh --delete
