--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
 
       - name: Deploy static site to S3 bucket
         run: |
-          aws s3 sync ./public/ s3://lab-bucket-kbsingh --delete
+          aws s3 sync ./public/ s3://lab-bucket-kbsingh10 --delete
